--- a/ad-agency-kb/package.json
+++ b/ad-agency-kb/package.json
@@ -14,6 +14,7 @@
     "@supabase/auth-ui-shared": "^0.1.8",
     "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.43.4",
+    "autoprefixer": "^10.4.21",
     "mammoth": "^1.9.1",
     "next": "14.2.3",
     "pdf-parse": "^1.1.1",
