--- a/campaign-service/package.json
+++ b/campaign-service/package.json
@@ -1,31 +1,29 @@
 {
-  "name": "knowledge-base-service",
+  "name": "campaign-service",
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --port 3001",
     "build": "next build",
-    "start": "next start",
+    "start": "next start --port 3001",
     "lint": "next lint"
   },
   "dependencies": {
-    "@supabase/ssr": "^0.6.1",
-    "@supabase/supabase-js": "^2.43.4",
-    "mammoth": "^1.9.1",
-    "next": "14.2.3",
-    "pdf-parse": "^1.1.1",
     "react": "^18",
     "react-dom": "^18",
-    "tesseract.js": "^6.0.1"
+    "next": "14.2.3",
+    "@supabase/ssr": "^0.3.0",
+    "@supabase/supabase-js": "^2.43.1",
+    "openai": "^4.47.1"
   },
   "devDependencies": {
+    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.3",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "eslint": "^8",
+    "eslint-config-next": "14.2.3"
   }
 }
