--- a/ad-agency-kb/package.json
+++ b/ad-agency-kb/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.43.4",
+    "autoprefixer": "^10.4.21",
     "mammoth": "^1.9.1",
     "next": "14.2.3",
     "pdf-parse": "^1.1.1",
