--- a/campaign-service/.env.local.example
+++ b/campaign-service/.env.local.example
@@ -2,12 +2,18 @@
 NEXT_PUBLIC_SUPABASE_URL=your-supabase-url
 NEXT_PUBLIC_SUPABASE_ANON_KEY=your-supabase-anon-key
 
-# OpenAI Configuration
+# OpenAI Configuration (ONLY for embeddings)
 OPENAI_API_KEY=your-openai-api-key
-OPENAI_ASSISTANT_ID=your-openai-assistant-id
+
+# Google Gemini Configuration (for ad copy generation with Google Maps tool)
+GEMINI_API_KEY=your-gemini-api-key
+
+# Google Maps Configuration (for real-time proximity data)
+GOOGLE_MAPS_API_KEY=your-google-maps-api-key
 
 # Instructions:
 # 1. Copy this file to .env.local
 # 2. Fill in your actual values
-# 3. For OPENAI_ASSISTANT_ID: Create an Assistant in OpenAI Playground or via API
-# 4. Make sure your Assistant has instructions for copywriting tasks 
+# 3. OPENAI_API_KEY: Only used for vector search embeddings
+# 4. GEMINI_API_KEY: Used for ad copy generation with real-time Google Maps data
+# 5. For proximity campaigns, Gemini will automatically use Google Maps to find real nearby places 
