--- a/campaign-service/package.json
+++ b/campaign-service/package.json
@@ -9,10 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
     "@supabase/ssr": "^0.3.0",
     "@supabase/supabase-js": "^2.43.1",
     "next": "14.2.3",
-    "openai": "^4.47.1",
+    "openai": "^5.10.1",
     "react": "^18",
     "react-dom": "^18"
   },
