--- a/campaign-service/package.json
+++ b/campaign-service/package.json
@@ -15,7 +15,8 @@
     "next": "14.2.3",
     "openai": "^5.10.1",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@types/node": "^20",
